fix modal bug (gsap- scale animation) modal z-index: 5

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,9 +2,6 @@
 /* ========== FOOTER ========== */
 
 .footer {
-	position: -webkit-sticky;
-	position: sticky;
-	top: 50;
 	width: var(--max-width);
 	background: rgba(0, 0, 0, 0.848);
 	color: white;
@@ -63,7 +60,7 @@
 
 .footer-top-img-cover {
 
-	z-index: 4;
+	z-index: 3;
 
 	position: relative;
 	display: flex;
